--- a/manifest/package.xml
+++ b/manifest/package.xml
@@ -1,10 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
     <types>
-        <members>Unified_File__c</members>
-        <members>Unified_Sync_Log__c</members>
-        <members>Unified_Sync_Config__mdt</members>
-        <name>CustomObject</name>
+        <members>*</members>
+        <name></name>
     </types>
     <version>65.0</version>
 </Package>
