--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -2,7 +2,7 @@
   "packageDirectories": [
     {
       "versionName": "",
-      "versionNumber": "1.0.1.NEXT",
+      "versionNumber": "1.1.0.NEXT",
       "path": "force-app",
       "default": true,
       "package": "Unified File Reporting on Salesforce",
@@ -14,6 +14,7 @@
   "sfdcLoginUrl": "https://login.salesforce.com",
   "sourceApiVersion": "65.0",
   "packageAliases": {
-    "Unified File Reporting on Salesforce": "0HoWU0000001Bkb0AE"
+    "Unified File Reporting on Salesforce": "0HoWU0000001Bkb0AE",
+    "Unified File Reporting on Salesforce@1.1.0-1": "04tWU000000JTr7YAG"
   }
 }
